<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyblue"

    tools:context=".RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_CaliLogoRegister"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/calistheniclogobig1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--TeXT FOR CALIHOMEWORKOUT-->
    <TextView
        android:id="@+id/tvId_TextCali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="440dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tvText_TextCali"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="1.0" />

    <!--Input EMail-->



    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="352dp"
        android:width="270dp"
        android:background="@drawable/whitebackground_borderradius"
        android:ems="10"
        android:hint="@string/etHint_EmailRegister"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--Input Pass-->

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:width="270dp"
        android:background="@drawable/whitebackground_borderradius"
        android:ems="19"
        android:maxLines="1"
        android:hint="@string/etHint_PassRegister"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/passwordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="488dp"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:width="270dp"
        android:background="@drawable/whitebackground_borderradius"
        android:ems="19"
        android:maxLines="1"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--Regis Button-->
    <Button
        android:id="@+id/createAccountBtn"
        android:layout_width="313dp"
        android:layout_height="56dp"
        android:layout_marginBottom="120dp"
        android:width="275dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingTop="14dp"
        android:paddingRight="15dp"
        android:paddingBottom="14dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent" />


    <!--Already have an accont text-->


    <TextView
        android:id="@+id/tvId_TextAskAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="88dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tvHint_TextAskAcc"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent" />

    <!--LogIn Text -->
    <TextView
        android:id="@+id/loginTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="88dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_CaliLogoRegister"
        app:layout_constraintVertical_bias="1.0" />



</androidx.constraintlayout.widget.ConstraintLayout>


